load random questions from json

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcards Pharmacie</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -37,14 +38,14 @@
             </div>
 
             <div class="controls">
-                <button id="prev-btn"> << Précédent</button>
-                <button id="flip-btn">Retourner</button>
-                <button id="next-btn">Suivant >></button>
+                <button id="not-known-btn">X Non sue</button>
+                <button id="recalled-btn">Rappelée</button>
             </div>
 
             <div class="progress-container">
                 <div class="progress">
                     <span id="current-card">0</span>/<span id="total-cards">0</span>
+                    <span class="recalled-counter">Rappelées: <span id="recalled-count">0</span></span>
                 </div>
             </div>
         </main>
