switched project to node.js

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
     <title>Flashcards Pharmacie</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="theme-toggle">
@@ -56,6 +55,6 @@
         </footer>
     </div>
 
-    <script src="scripts.js"></script>
+    <script type="module" src="js/scripts.js"></script>
 </body>
 </html>
