--- a/src/index.html
+++ b/src/index.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcards Pharmacie</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-          rel="stylesheet">
+    <title>FlashPharma</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="theme-toggle">
-        <span class="theme-toggle-label">Mode</span>
-        <label class="theme-toggle-switch">
-            <input type="checkbox" id="theme-toggle-input">
-            <span class="theme-toggle-slider">
-                <span class="theme-toggle-icon sun">☀️</span>
-                <span class="theme-toggle-icon moon">🌙</span>
-            </span>
-        </label>
-    </div>
+    <header>
+        <h1>FlashPharma</h1>
+        <p>Système de cartes pour réviser vos connaissances pharmaceutiques</p>
+        <div class="theme-toggle">
+            <span class="theme-toggle-label">Mode</span>
+            <label class="theme-toggle-switch">
+                <input type="checkbox" id="theme-toggle-input">
+                <span class="theme-toggle-slider">
+                    <span class="theme-toggle-icon sun">☀️</span>
+                    <span class="theme-toggle-icon moon">🌙</span>
+                </span>
+            </label>
+        </div>
+    </header>
     <div class="container">
-        <header>
-            <h1>Flashcards Pharmacie</h1>
-            <p>Système de cartes de base avec un ensemble fixe de questions/réponses</p>
-        </header>
-
         <main>
+
             <div class="flashcard-container">
                 <div class="flashcard" id="flashcard">
                     <div class="flashcard-front" id="question">
@@ -33,6 +34,14 @@
                     </div>
                     <div class="flashcard-back" id="answer">
                         <p>La réponse apparaîtra ici</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flashcard-tags">
+                <div class="tag-container">
+                    <div class="tags" id="tags">
+                        <span class="tag-name">Tag 1</span>
                     </div>
                 </div>
             </div>
@@ -51,7 +60,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Flashcards pour Pharmaciens - Phase 1</p>
+            <p>2025 - FlashPharma - Flashcards pour Pharmaciens... et tous ceux que la pharmacie intéresse</p>
         </footer>
     </div>
 
