second update design

--- a/src/index.html
+++ b/src/index.html
@@ -10,53 +10,50 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="header">
-        <div class="theme-toggle" id="themeToggle">
-            <span class="theme-label">Mode</span>
-            <label class="toggle-switch" id="toggleSwitch">
-                <input type="checkbox" id="theme-toggle-input">
-                <span class="toggle-slider">
-                    <span class="toggle-icon sun">☀️</span>
-                    <span class="toggle-icon moon">🌙</span>
-                </span>
-            </label>
+<header class="header">
+    <div class="theme-toggle" id="themeToggle">
+        <span class="theme-label">Mode</span>
+        <div class="toggle-switch" id="toggleSwitch">
+            <div class="toggle-slider"></div>
+            <span class="toggle-icon sun">☀️</span>
+            <span class="toggle-icon moon">🌙</span>
         </div>
-        <h1 class="fade-in">FlashPharma</h1>
-        <p>Cartes pour révision</p>
-
-    </header>
-    <div class="container">
-        <main class="main-content">
-            <div class="flashcard-container fade-in">
-                <div class="flashcard" id="flashcard">
-                    <div class="flashcard-inner">
-                        <div class="flashcard-front" id="question">
-                            <p>Cliquez pour commencer</p>
-                        </div>
-                        <div class="flashcard-back" id="answer">
-                            <p>La réponse apparaîtra ici</p>
-                        </div>
+    </div>
+    <h1 class="fade-in">FlashPharma</h1>
+    <p>Cartes pour révision</p>
+</header>
+<div class="container">
+    <main class="main-content">
+        <div class="flashcard-container fade-in">
+            <div class="flashcard" id="flashcard">
+                <div class="flashcard-inner">
+                    <div class="flashcard-front" id="question">
+                        <p>Cliquez pour commencer</p>
+                    </div>
+                    <div class="flashcard-back" id="answer">
+                        <p>La réponse apparaîtra ici</p>
                     </div>
                 </div>
             </div>
-            <div class="controls fade-in">
-                <button class="btn btn-secondary" id="notKnownBtn">X Non sue</button>
-                <button class="btn btn-primary" id="recalledBtn">Je sais !</button>
+        </div>
+        <div class="controls fade-in">
+            <button class="btn btn-secondary" id="notKnownBtn">❌ Non sue</button>
+            <button class="btn btn-primary" id="recalledBtn">✅ Je sais !</button>
+        </div>
+
+        <div class="progress-section fade-in">
+            <div class="progress-item">
+                <span id="current-card">0</span>/<span id="total-cards">0</span>
+                <span class="recalled-counter">Rappelées: <span id="recalled-count">0</span></span>
             </div>
+        </div>
+    </main>
+</div>
 
-            <div class="progress-section fade-in">
-                <div class="progress-item">
-                    <span id="current-card">0</span>/<span id="total-cards">0</span>
-                    <span class="recalled-counter">Rappelées: <span id="recalled-count">0</span></span>
-                </div>
-            </div>
-        </main>
-    </div>
+<footer class="footer">
+    <p>2025 - FlashPharma - Flashcards pour Pharmaciens... et tous ceux que la pharmacie intéresse</p>
+</footer>
 
-    <footer class="footer">
-        <p>2025 - FlashPharma - Flashcards pour Pharmaciens... et tous ceux que la pharmacie intéresse</p>
-    </footer>
-
-    <script type="module" src="js/scripts.js"></script>
+<script type="module" src="js/scripts.js"></script>
 </body>
 </html>
