--- a/src/index.html
+++ b/src/index.html
@@ -11,45 +11,23 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body data-theme="dark">
-<!-- Sidebar Menu -->
-<div class="sidebar" id="sidebar">
-    <div class="sidebar-header">
-        <h2>Menu</h2>
-        <button class="sidebar-close" id="sidebarClose">
-            <i class="fas fa-times"></i>
-        </button>
-    </div>
-    <nav class="sidebar-nav">
-        <button class="sidebar-item" id="filterBtn">
+
+<header class="header">
+    <div class="header-controls">
+        <button class="header-btn" id="filterBtn" title="Filtrer">
             <i class="fas fa-filter"></i>
-            <span id="filterText">Filtrer</span>
         </button>
-        <button class="sidebar-item" id="statsBtn">
+        <button class="header-btn" id="statsBtn" title="Statistiques">
             <i class="fas fa-chart-bar"></i>
-            <span>Statistiques</span>
         </button>
-        <div class="sidebar-divider"></div>
-        <div class="sidebar-item theme-toggle" id="themeToggle">
-            <i class="fas fa-palette"></i>
-            <span class="theme-label">Mode</span>
+        <div class="theme-toggle-main" id="themeToggle">
             <div class="toggle-switch" id="toggleSwitch">
                 <div class="toggle-slider"></div>
                 <span class="toggle-icon sun"><i class="fas fa-sun"></i></span>
                 <span class="toggle-icon moon"><i class="fas fa-moon"></i></span>
             </div>
         </div>
-    </nav>
-</div>
-
-<!-- Sidebar Overlay -->
-<div class="sidebar-overlay" id="sidebarOverlay"></div>
-
-<!-- Menu Toggle Button -->
-<button class="menu-toggle" id="menuToggle">
-    <i class="fas fa-bars"></i>
-</button>
-
-<header class="header">
+    </div>
     <h1 class="fade-in">FlashPharma</h1>
     <p>Cartes pour révision</p>
 </header>
@@ -57,13 +35,11 @@
     <main class="main-content">
         <div class="flashcard-container fade-in">
             <div class="flashcard" id="flashcard">
-                <div class="flashcard-inner">
-                    <div class="flashcard-front" id="question">
-                        <p>Cliquez pour commencer</p>
-                    </div>
-                    <div class="flashcard-back" id="answer">
-                        <p>La réponse apparaîtra ici</p>
-                    </div>
+                <div class="flashcard-front" id="question">
+                    <p>Cliquez pour commencer</p>
+                </div>
+                <div class="flashcard-back" id="answer">
+                    <p>La réponse apparaîtra ici</p>
                 </div>
             </div>
         </div>
